--- a/templates/success.html
+++ b/templates/success.html
@@ -30,10 +30,12 @@
         <div class="col-sm-6">
           <div class="well">
             <p>
-              <strong>Provider</strong>: {{.Provider}}<br>
-              <!-- <strong>Thanks for Using</strong> {{.Provider}} !authentication<br>  -->
-
               <strong>Welcome!</strong> {{.Name}}<br>
+              <strong>UserId</strong>:{{.UserID}}<br>
+              <strong>FirstName</strong>:{{.FirstName}}<br>
+              <strong>LastName</strong>:{{.LastName}}<br>
+              <strong>Email</strong>:{{.Email}}<br>
+              <strong>Provider</strong>: {{.Provider}}<br>
               <br>
               <br>
 
