--- a/templates/login.html
+++ b/templates/login.html
@@ -14,47 +14,18 @@
   </head>
 
   <body class="bg">
-
-  	
   	<div class="social-wrapper flex">
-
-  		<div class="socail-left flex">
-
-  			<img src="assets/img/socail-login.svg">
-
-  		</div>
-
-
-  		<div class="socail-right">
-
-  			
-
   			<div class="flex social-btns">
-
-				<h3>Social Login Using Golang </h3>
-
+				<h3>Social Login </h3>
+				<br><br><br>
   				<a href="/auth/google" class="flex ripple google"> <img src="assets/img/google.svg"> Log in with Google </a>
-
   				<a href="/auth/facebook" class="flex ripple fb"> <img src="assets/img/fb.svg"> Log in with Facebook </a>
   			</div>
-
-  		</div>
-
-
   	</div>
-  	
-  	
-
-
   	<!-- JS -->
-
   	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-
-	
-
   </body>
 
  </html>
